--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -12,15 +12,16 @@
   }
   
   .section-title {
+	margin-top: 2rem;
 	padding-bottom: 30px;
   }
   .section-title h2 {
 	font-size: 32px;
 	font-weight: bold;
 	margin-bottom: 20px;
-	padding-bottom: 5px;
 	position: relative;
 	color: #002B53;
+	padding-bottom: 0px !important;
   }
   .section-title h2::after {
 	content: "";
@@ -28,7 +29,7 @@
 	display: block;
 	width: 90px;
 	height: 3px;
-	background: #6b6b6b;
+	background: #6b6b6b !important;
 	bottom: 0;
 	left: 0;
   }
